# serializer

./: CMakeLists.txt  Dockerfile  Serializer.nuspec  Serializer.targets  main.cpp
src/: CMakeLists.txt  main.cpp  reflection_utils.h  serializer.cpp  serializer.h  stream_operators.cpp  stream_operators.h  test_types.cpp  test_types.h  tools.cpp  tools.h  xml_processor.cpp  xml_processor.h
tests/: SerializerUTestLoad.cpp  SerializerUTestSave.cpp  StdLibStreamOperatorUTests.cpp  ToolsUTests.cpp
tests/files/: correct_load_file.xml  incorrect_load_file_missing_field.xml  incorrect_load_file_wrong_value_field.xml  test_empty_object_save_1.xml  test_file_class_1_load.xml  test_file_class_2_load.xml  test_file_vector_class_load.xml  test_file_vector_int_load.xml  test_file_vector_vector_int_load.xml  test_file_vector_vector_string_load.xml  test_object_save_1.xml  test_object_save_2.xml  test_vector_class_save.xml  test_vector_int_save.xml  test_vector_vector_int_save.xml
